# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  sonar-project.properties
.github/workflows/: sonar.yml  workflow.yml
page_analyzer/: app.py  checker.py  database.py  parser.py  validator.py
page_analyzer/templates/: base.html  index.html  url_detail.html  urls.html
